<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DeviceTool</string>

    <string name="loading">正在获取</string>

    <string name="sim_card_title">卡槽</string>
    <string name="sim_card_imei">IMEI</string>
    <string name="sim_card_company">SIM运营商</string>
    <string name="sim_card_imsi">SIM IMSI</string>
    <string name="sim_card_iccid">ICCID</string>
    <string name="sim_card_iccid_info">ICCID信息</string>
    <string name="sim_card_phone_number">电话号码</string>


    <string name="sim_card_company_title">网络运营商</string>
    <string name="sim_card_company_name">运营商</string>
    <string name="sim_card_company_mcc">MCC</string>
    <string name="sim_card_company_mnc">MNC</string>

    <string name="sim_card_service_title">服务小区</string>
    <string name="sim_card_service_location">我的位置：%1$s</string>
    <string name="sim_card_service_data_net">数据网</string>
    <string name="sim_card_service_type">小区类型</string>
    <string name="sim_card_service_tac">TAC</string>
    <string name="sim_card_service_pci">PCI</string>
    <string name="sim_card_service_eci">ECI</string>
    <string name="sim_card_service_earfcn">EARFCN</string>
    <string name="title_activity_maps">Map</string>

    <string name="device_hard_ware_title">硬件</string>
    <string name="device_brand">品牌</string>
    <string name="device_model">型号</string>
    <string name="device_hardware">硬件</string>
    <string name="device_board">Board</string>
    <string name="device_abi">支持的ABI</string>
    <string name="device_id">ID</string>
    <string name="device_display">DISPLAY</string>
    <string name="device_product">产品</string>
    <string name="device_device">设备</string>
    <string name="device_jidai">基带</string>
    <string name="device_serial">序列</string>
    <string name="device_screen_size">主屏尺寸</string>
    <string name="device_screen_pixels">主屏分辨率</string>
    <string name="device_screen_dpi">屏幕像素密度</string>
    <string name="device_ram">内存 已用/全部</string>
    <string name="device_rom">存储 已用/全部</string>

    <string name="battery_title">电池</string>
    <string name="battery_status">状态</string>
    <string name="battery_type">类型</string>
    <string name="battery_health">健康</string>
    <string name="battery_power">电源</string>
    <string name="battery_percent">百分比</string>
    <string name="battery_U">电压</string>
    <string name="battery_temp">温度</string>
    <string name="battery_volume">电池容量</string>

    <string name="system_title">系统</string>
    <string name="system_sdk_int">SDK INT</string>
    <string name="system_release">RELEASE</string>
    <string name="system_version_name">VERSION NAME</string>
    <string name="system_bootloader">BOOTLOADER</string>
    <string name="system_java_vm">JAVA VM</string>
    <string name="system_os_architecture">OS ARCHITECTURE</string>
    <string name="system_os_version">OS VERSION</string>
    <string name="system_runtime_version">RUNTIME VERSION</string>

    <string name="connected">已连接</string>
    <string name="shindao">信道</string>
    <string name="local_net_device">局域网设备</string>
    <string name="wifi_list">热点列表</string>

    <string name="wifi_name">名称</string>
    <string name="wifi_device">设备</string>
    <string name="wifi_quality">强度</string>
    <string name="wifi_hz">频率</string>
    <string name="wifi_shindao">信道</string>
    <string name="device_unknow">未知名称</string>
    <string name="device_unknow_company">未知厂商</string>
    <string name="ip_address">IP地址：%s</string>
    <string name="mac_address">MAC地址：%s</string>
    <string name="your_phone">本机</string>
    <string name="gate_net">网关</string>
    <string name="unknown">未知名称</string>
    <string name="connect_wifi_please">请连接WiFi!</string>


    <string name="sta_list">卫星列表</string>
    <string name="fangweijiao">方位角</string>
    <string name="gaodujiao">高度角</string>
    <string name="type">类型</string>
    <string name="svid">SVID</string>
    <string name="xingzaobi">信噪比</string>
    <string name="lishu">历书</string>
    <string name="xingli">星历</string>
    <string name="used">使用</string>
</resources>
