<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/wifi_name"
        android:textColor="@color/color_normal"
        android:textSize="@dimen/text_size_content" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color_black_bg" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/wifi_device"
        android:textColor="@color/color_normal"
        android:textSize="@dimen/text_size_content" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color_black_bg" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wifi_quality"
        android:textColor="@color/color_normal"
        android:textSize="@dimen/text_size_content" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color_black_bg" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wifi_hz"
        android:textColor="@color/color_normal"
        android:textSize="@dimen/text_size_content" />

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/color_black_bg" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/wifi_shindao"
        android:textColor="@color/color_normal"
        android:textSize="@dimen/text_size_content" />
</LinearLayout>