<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sta_list"
            android:textColor="@color/color_normal"
            android:textSize="@dimen/text_size_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fangweijiao"
                android:textColor="@color/color_normal"
                android:textSize="12sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/gaodujiao"
                android:textColor="@color/color_normal"
                android:textSize="12sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/type"
                android:textColor="@color/color_normal"
                android:textSize="12sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/svid"
                android:textColor="@color/color_normal"
                android:textSize="12sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/xingzaobi"
                android:textColor="@color/color_normal"
                android:textSize="12sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/lishu"
                android:textColor="@color/color_normal"
                android:textSize="12sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/xingli"
                android:textColor="@color/color_normal"
                android:textSize="12sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/color_normal" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/used"
                android:textColor="@color/color_normal"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_normal" />

        <LinearLayout
            android:id="@+id/ll_gps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>
</ScrollView>