<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/tv_wifi_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/wifi_name"
            android:textColor="@color/color_normal"
            android:textSize="@dimen/text_size_content" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_black_bg" />

        <TextView
            android:id="@+id/tv_wifi_device"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/wifi_device"
            android:textColor="@color/color_normal"
            android:textSize="@dimen/text_size_content" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_black_bg" />

        <TextView
            android:id="@+id/tv_wifi_quality"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wifi_quality"
            android:textColor="@color/color_normal"
            android:textSize="@dimen/text_size_content" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_black_bg" />

        <TextView
            android:id="@+id/tv_wifi_hz"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wifi_hz"
            android:textColor="@color/color_normal"
            android:textSize="@dimen/text_size_content" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_black_bg" />

        <TextView
            android:id="@+id/tv_wifi_shindao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/wifi_shindao"
            android:textColor="@color/color_normal"
            android:textSize="@dimen/text_size_content" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/color_black_bg" />
</LinearLayout>